# CanDE

./: README.md
in-memory/: .gitignore  KDE_workflow.md
in-memory/Common/: AnnResultWriter.hpp
in-memory/FALCONN/: .gitignore  CMakeLists.txt  FalconnMain.cc  Makefile  README.md  candidate_probs.cc  candidate_probs_fast.cc  falconn_recall_table.cc  falconn_selectivity.cc  fvecs.py  hbe.cpp  hbe2.cpp  kronecker.json  memory_time.cc  mp_probs copy.cc  mp_probs.cc  qdde_gt.cc  run.sh
in-memory/FALCONN/src/alt_scripts/: affine_space.py  affine_space2.py  affine_space4.py  autorun.py  center.py  command_console.py  diagnostic.py  fvecs.py  fvecs_to_plaintxt.py  gaussian_generate.py  intersection.py  l2_histo.py  l2_mapped.py  linear_scan.py  linear_scan_dist.py  linear_scanl2.py  linear_transform.py  map.py  nn_dist.py  plaintext.py  psd_matrix.py  sample2.py  subspace_select.py  weight_generate.py  wl2_prepare.py
in-memory/FALCONN/src/backup/: dyatree_rw copy.h  nn_query copy 2.h  nn_query copy.h  nn_query_recent.h  removed_from_wrapper.cpp
in-memory/FALCONN/src/filter/: filter  filter.cc  filter.sh  filter2.cc  filter_debug.sh  filter_temp.cc  filter_test  json_read.py
in-memory/FALCONN/src/filter/test/: Untitled.ipynb  makeread.sh  readtest  readtest.cc  timertest  timertest.cc
in-memory/FALCONN/src/include/falconn/: CMakeLists.txt  config.h  constexpr.h  falconn_global.h  fileio.h  lsh_nn_table.h  peakrss.h  query_mode.h
in-memory/FALCONN/src/include/falconn/core/: cande_nn_query.h  composite_hash_table.h  data_storage.h  dyatree.h  dyatree_rw.h  dyatree_rw2.h  euclidean_distance.h  flat_hash_table.h  gaussian_hash.h  histogram.h  lsh_function_helpers.h  lsh_query_new.h  lsh_table_new.h  matrix_inner_product.h  mle.h  multiprobe.h  multiprobe_cp.h  nearest_hyperplane.h  nn_query.h  nn_query_cache.h  partition_hash_table.h  partition_metric.h  polytope_hash2.h  prefetchers.h  rangesummable.h  succ_probability.h
in-memory/FALCONN/src/include/falconn/ffht/: CMakeLists.txt
in-memory/FALCONN/src/include/falconn/kronecker/: CMakeLists.txt  cross_polytope_lsh.cc  cross_polytope_lsh.h  global.h  kronecker_lsh.cc  kronecker_lsh.h  pseudorandom_rotation.cc  pseudorandom_rotation.h  utils.h
in-memory/FALCONN/src/include/falconn/oniak/: dleft copy 2.hpp  dleft copy.hpp  dleft.hpp  hash_table.hpp  hash_wrapper.hpp  misc.hpp  real_array.hpp  recall.hpp
in-memory/FALCONN/src/include/falconn/sampler/: fair_nn_sampler.h  hypothesis_testing.h  oniak_sampler.h  oniak_simulation_sampler.h  oniak_tbl_sampler.h
in-memory/FALCONN/src/include/falconn/wrapper/: cpp_wrapper_impl.h  data_storage_adapter.h
in-memory/FALCONN/src/kde_scripts/: FNN_plot.ipynb  HBS_debug.ipynb  KDE_plot.ipynb  abs.py  all_one.py  auto_param.py  auto_prepare.py  autorun.sh  average.py  candidates.py  candnum_plot.ipynb  combine_test.ipynb  command_console.py  data_normalize.py  distance_adaptive_mle.py  distance_hist copy.py  distance_hist.py  distance_hist_bayesian.py  distance_hist_bayesian2.py  distance_hist_bayesian3.py  distance_hist_debug.ipynb  distance_hist_debug.py  distance_hist_mle.py  distance_hist_oblivious.ipynb  distance_hist_oblivious.py  distance_hist_oblivious2.py  distance_hist_queries.py  distance_hist_random.ipynb  distance_hist_tables.py  distance_hist_triangle.py  distance_scale.py  distance_xy.py  duplicate.py  fair_summary.py  fairnn_parameter_tuning.py  falconn_candidate_ready.py  falconn_distance_estimation copy.py  falconn_fair.py  falconn_get_table_candinum.py  falconn_kde_accu_final.py  (+49 more)
in-memory/FALCONN/src/kde_scripts/run/: get_candidates.py  plot_kde.py  run_fair_accuracy.py  run_fair_accuracy2.py  run_fair_accuracy3.py  run_fair_prepare.py  run_fair_prepare2.py  run_fair_time.py  run_fair_time_distance.py  run_fairnn_accuracy.py  run_fairnn_accuracy2.py  run_fairnn_accuracy3.py  run_fnn_time.py  run_hbe.py  run_kde.py  run_kde_08.py  run_kde_mle.py  run_kde_sample.py  run_kde_tbl.py  run_kde_tbl2.py  run_kde_tbl3.py  run_normalize.py  run_selectivity.py  run_selectivity_original.py  wait.py
in-memory/FALCONN/src/rounding/: autocast.cc  cast  ecdf.py  rounding  rounding_header.hpp  rounding_n  rounding_naive.cc  rounding_testbed.cc  rounding_why  rounding_why.cc
in-memory/FALCONN/src/test/: CMakeLists.txt  compact_bool_test.cc  config.json  config1.json  config3.json  config4.json  gt_time.cc  mp_collision.cc  mp_score_test.cc  mp_score_test2.cc  multiprobe_test copy.cc  multiprobe_test.cc  polytope_test.cc  stop_watch.hpp
in-memory/FALCONN/src/test/simulation/: CMakeLists.txt  config.hpp  data_generator.cc  data_generator.h
